--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # IDE specific
 .idea/
 
+# Lock files
+Gopkg.lock
 
 # Created by https://www.gitignore.io/api/go
 # Edit at https://www.gitignore.io/?templates=go
